# QuickLectureNoteTaker

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt
scripts/: import_check.py
src/lecturen/: audio.py  chunk.py  cli.py  config.py  extract.py  ingest.py  models.py  normalize.py  render.py  transcribe.py
src/lecturen/prompts/: extraction_prompt.txt
src/lecturen/utils/: io.py  logging.py  timestamps.py
tests/: test_chunking.py  test_render_golden.py
tests/fixtures/: sample_transcript.json
tests/golden/: render_simple.md
